navbar affix and full height jumbotron

--- a/cygnus_site/templates/cygnus_site/index.html
+++ b/cygnus_site/templates/cygnus_site/index.html
@@ -6,16 +6,28 @@
 
   <!-- Top Jumbotron
   ================================================== -->
-  <div class="jumbotron">
+  <div class="jumbotron" style="height:{%verbatim%}{{height}}{%endverbatim%}px">
     <div class="container">
       <h1>Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting  point to create something more unique.</p>
       <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
     </div>
+
   </div> <!-- ./jumbotron -->
 
   <!-- Navbar
   ================================================== -->
+  <div class="cygnus-nav" bs-affix>
+    <div class="container">
+      <div class="inner">
+        <ul class="list-inline">
+          <li><h2>About</h2></li>
+          <li><h2>Services</h2></li>
+          <li><h2>Contact</h2></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
 
   <!-- Trait Highlights
