--- a/cygnus_site/templates/cygnus_site/index.html
+++ b/cygnus_site/templates/cygnus_site/index.html
@@ -2,85 +2,113 @@
 
 {% block content %} <!-- This block content is placed inside of base.html body -->
 <div ng-app="CygnusApp" ng-controller="CygnusCtrl">
+  <!-- aside css -->
+  <link href="{{ STATIC_URL }}css/lib/bootstrap-additions.min.css" rel="stylesheet">
+  <!-- custom style loaded after lib so that we override it -->
   <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet">
 
-  <!-- Top Jumbotron
+  <!-- Navbar (sticks to top)
   ================================================== -->
-  <div class="jumbotron" style="height:{%verbatim%}{{height}}{%endverbatim%}px">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-      <h1>Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting  point to create something more unique.</p>
-      <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-    </div>
-
-  </div> <!-- ./jumbotron -->
-
-  <!-- Navbar
-  ================================================== -->
-  <div class="cygnus-nav" bs-affix>
-    <div class="container">
-      <div class="inner">
-        <ul class="list-inline">
-          <li><h2>About</h2></li>
-          <li><h2>Services</h2></li>
-          <li><h2>Contact</h2></li>
-        </ul>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-html="true" data-placement="left" data-animation="am-slide-left" bs-aside="aside">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
       </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="about">About</a></li>
+          <li><a href="services">Services</a></li>
+          <li><a href="pricing">Pricing</a></li>
+          <li><a href="contact">Contact</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
   </div>
 
-
-  <!-- Trait Highlights
+  <!-- Top Jumbotron (height is initialized to available screen height)
   ================================================== -->
-  <div class="container">
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Cygnus Management</h1>
+      <p>We are a full-service accounting firm serving small to medium sized businesses throughout the Bay Area. </p>
+    </div>
+
+      <div ng-controller="slideShowController" class="imageslide" ng-switch='slideshow' ng-animate="'animate'">
+        <div class="slider-content " ng-switch-when="1">
+          <p class="container">Slider's are amazing1!</p>
+        </div>  
+        <div class="slider-content" ng-switch-when="2">
+          <p class="container">Slider's are amazing2!</p>
+        </div>
+        <div class="slider-content" ng-switch-when="3">
+          <p class="container">Slider's are amazing3!</p>
+        </div>  
+        <div class="slider-content" ng-switch-when="4">
+          <p class="container">Slider's are amazing4!</p>
+        </div>  
+      </div>
+<br><br><br>  
+<!--      <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p> -->
+
+  </div> <!-- ./jumbotron -->
+
+  <!-- Trait Highlights (triple circles)
+  ================================================== -->
+  <div class="highlights container">
     <!-- Three columns of text below the carousel -->
-    <div class="highlights row">
+    <div class="row"><!-- Accounting Specialists -->
       <div class="col-md-4">
         <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
         <h2>Accounting Specialists</h2>
         <p>Our company provide a broad spectrum of accounting and bookkeeping services customized to meet the needs of your business. We have a team of experienced bookkeepers and accountants at your disposal. Our services are designed to provide you with reliable, cost-effective solutions. Our dedication to your company’s success means you can count on us for all your accounting needs.</p>
       </div><!-- /.col-md-4 -->
-    <div class="row">
       <div class="col-md-4">
         <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
         <h2>Our Team</h2>
         <p>By partnering with us, we can help manage your day-to-today accounting needs so that you can concentrate on maximizing your core business, which is essential to businesses that are positioned for growth. No matter what your needs are, with a certified professional by your side, rest asure that all your bookkeeping is in order.</p>
       </div><!-- /.col-md-4 -->
-    <div class="row">
       <div class="col-md-4">
         <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
         <h2>Software Specialization</h2>
         <p>We work with well known software programs like Oracle11i, QuickBooks, Netsuite, Great Plains, MS Access, MS Excel and other popular accounting applications.</p>
       </div><!-- /.col-md-4 -->
     </div><!-- /.row -->
-  </div><!-- / .highlights -->
+  </div><!-- /.container -->
 
 
-  <!-- Featurettes
+  <!-- Featurettes (staggered list)
   ================================================== -->
   <div class="container">
 
     <hr class="featurette-divider">
 
+    <!-- Professionalism -->
     <div class="row featurette">
-      <div class="col-md-7">
+      <div class="col-sm-7">
         <h2 class="featurette-heading">Professionalism.</h2>
         <p class="lead">Our firm is one of the leading firms in the area. By combining our expertise, experience and the energy of our staff, each client receives close personal and professional attention.
 
 Our high standards, service and specialized staff spell the difference between our outstanding performance, and other firms. We make sure that every client is served by the expertise of our whole firm.</p>
       </div>
-      <div class="col-md-5">
+      <div class="col-sm-5">
         <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette test">
-      <div class="col-md-5">
+    <!-- Quality -->
+    <div class="row featurette">
+      <div class="hidden-xs col-sm-5">
         <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
       </div>
-      <div class="col-md-7">
+      <div class="col-sm-7">
         <h2 class="featurette-heading">Quality</h2>
         <p class="lead">An accounting firm is known for the quality of its service. Our firm's reputation reflects the high standards we demand of ourselves.
 
@@ -88,12 +116,16 @@ Our primary goal as a trusted advisor is to be available and to provide insightf
 
 We feel it is extremely important to continually professionally educate ourselves to improve our technical expertise, financial knowledge and service to our clients. Our high service quality and "raving fan" clients are the result of our commitment to excellence. We will answer all of your questions, as they impact both your tax and financial situations.</p>
       </div>
+      <div class="visible-xs col-sm-5">
+        <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
+      </div>
     </div>
 
     <hr class="featurette-divider">
 
+    <!-- Responsiveness -->
     <div class="row featurette">
-      <div class="col-md-7">
+      <div class="col-sm-7">
         <h2 class="featurette-heading">Responsiveness</h2>
         <p class="lead">Our firm is responsive. Companies who choose our firm rely on competent advice and fast, accurate personnel. We provide total financial services to individuals, large and small businesses and other agencies.
 
@@ -101,14 +133,27 @@ To see a listing of our services, please take a moment and look at our services 
 
 Through hard work, we have earned the respect of the business and financial communities. This respect illustrates our diverse talents, dedication and ability to respond quickly.</p>
       </div>
-      <div class="col-md-5">
+      <div class="col-sm-5">
         <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
       </div>
     </div>
 
     <hr class="featurette-divider">
-  
+
   </div> <!-- ./container -->
+
+  <!-- Top Jumbotron (height is initialized to available screen height)
+  ================================================== -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Customer feedback</h1>
+      <div id="customer1" class="bubble">
+      <p>"I like the fact that I can talk to my same  Representative each and every time." - J. Esperitu</p>
+    </div>
+    </div>
+  </div> <!-- ./jumbotron -->
+
+
 
 </div>
 {% endblock %}
