--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,41 +5,186 @@
 /* Other */
 /* GLOBAL STYLES
 -------------------------------------------------- */
+#indicator {
+  position: fixed;
+  left: 0;
+  top: 98%;
+  width: 100%;
+  z-index: 9000; }
+
 html {
   overflow-x: hidden; }
 
-.jumbotron {
+.imageslide .slider-content {
+  position: absolute;
   width: 100%;
-  padding: 0;
-  background-color: white; }
+  height: 400px; }
+
+.slider-content.ng-enter, .slider-content.ng-leave {
+  -webkit-transition: 1000ms cubic-bezier(0.165, 0.84, 0.44, 1) all;
+  -moz-transition: 1000ms cubic-bezier(0.165, 0.84, 0.44, 1) all;
+  -ms-transition: 1000ms cubic-bezier(0.165, 0.84, 0.44, 1) all;
+  -o-transition: 1000ms cubic-bezier(0.165, 0.84, 0.44, 1) all;
+  transition: 1000ms cubic-bezier(0.165, 0.84, 0.44, 1) all; }
+
+.slider-content.ng-enter {
+  left: 100%; }
+
+.slider-content.ng-enter.ng-enter-active {
+  left: 0; }
+
+.slider-content.ng-leave {
+  left: 0; }
+
+.slider-content.ng-leave.ng-leave-active {
+  left: -100%; }
+
+.bubble {
+  position: relative;
+  padding: 10px;
+  margin: 20px;
+  width: auto;
+  height: auto;
+  color: black;
+  border: 1px solid white;
+  background: #FFFFFF;
+  /* round edges */
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  /* box shadow */
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 0px 6px 30px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 0px 6px 30px 0px rgba(50, 50, 50, 0.75); }
+
+/* bubble triangle */
+#customer1:after {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 7px 22px 7px 0;
+  border-color: transparent #FFFFFF;
+  display: block;
+  width: 0;
+  z-index: 1;
+  left: -22px;
+  top: 30px; }
+
+.aside-backdrop {
+  z-index: 0; }
+
+footer {
+  background: #2c3e50;
+  padding: 10px 0;
+  color: #81949f; }
+  footer ul {
+    margin-bottom: 0;
+    /* override bootstrap css */ }
+  footer #footer-items li {
+    margin: 20px 10px; }
+  footer #footer-social a {
+    line-height: 48px;
+    background: #81949f;
+    opacity: .4;
+    color: #2c3e50;
+    font-size: 26px;
+    margin: 5px 10px;
+    /* create circles */
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    border-radius: 100%;
+    /* unit cricles */
+    width: 48px;
+    height: 48px;
+    display: inline-block;
+    /* bevel */
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    /* top */
+    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid rgba(44, 62, 80, 0.6);
+    /* bottom */ }
+  footer #footer-social a:hover {
+    opacity: 1;
+    /* animate to full opacity */
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out; }
+
+/* NAVBAR STYLES
+-------------------------------------------------- */
+/* dividers
+*/
+.navbar {
+  width: 100%;
+  background-color: white;
+  /*  border-top: 6px solid #2980b9; */
+  border: 0;
+  -webkit-box-shadow: 0px 2px 6px 0px rgba(50, 50, 50, 0.8);
+  -moz-box-shadow: 0px 2px 6px 0px rgba(50, 50, 50, 0.8);
+  box-shadow: 0px 2px 6px 0px rgba(50, 50, 50, 0.8); }
+  .navbar .navbar-toggle {
+    border: 1px solid #bdc3c7; }
+    .navbar .navbar-toggle .icon-bar {
+      background-color: #bdc3c7; }
 
 .cygnus-nav {
   width: 100%;
-  z-index: 100;
-  margin-bottom: 40px;
-  /* margin between green line and triple circles */
-  border-bottom: 6px solid #2CB34A;
-  background-color: white; }
+  z-index: 9000;
+  border-bottom: 1px solid #284F0B;
+  background: -webkit-gradient(linear, center top, center bottom, from(#429a00), to(#2c6700)); }
   .cygnus-nav .list-inline {
-    text-align: center; }
+    border-left: 1px solid #2C550E;
+    margin-bottom: 0; }
+    .cygnus-nav .list-inline li {
+      border-left: 1px solid #568831;
+      border-right: 1px solid #2C550E;
+      padding: 0 10px; }
+      .cygnus-nav .list-inline li a {
+        font-size: 24px;
+        color: white; }
 
-.inner {
-  width: 50%;
-  margin: 0 auto; }
+/* LANDING PAGE STYLES
+-------------------------------------------------- */
+.jumbotron {
+  width: 100%;
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 40px;
+  color: white;
+  background: #2980b9;
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); }
+
+.highlights {
+  margin-top: 40px;
+  /* margin between green line and triple circles */ }
 
 /* Center align the text within the three columns below the carousel */
-.highlights .col-md-4, .founders .col-md-4 {
+.highlights .col-md-4,
+.founders .col-md-4 {
   margin-bottom: 20px;
   text-align: center; }
-  .highlights .col-md-4 p, .founders .col-md-4 p {
+  .highlights .col-md-4 p,
+  .founders .col-md-4 p {
     margin-right: 10px;
     margin-left: 10px; }
-.highlights h2, .founders h2 {
+.highlights h2,
+.founders h2 {
   font-weight: normal; }
-.highlights h1, .founders h1 {
+.highlights h1,
+.founders h1 {
   text-align: center;
   margin-bottom: 40px; }
 
+.featurette-image {
+  margin: 0 auto; }
+
+/* ABOUT PAGE STYLES
+-------------------------------------------------- */
 .team .row {
   align: center; }
 
@@ -64,11 +209,15 @@ html {
 /* xs, sm */
 /* phones; bootstrap - xs */
 @media (max-width: 768px) {
+  .featurette {
+    padding: 0 10px; }
+
   #indicator {
     background: #FDC68A;
     /* orange */ }
 
-  .highlights .col-md-4 p, .founders .col-md-4 p {
+  .highlights .col-md-4 p,
+  .founders .col-md-4 p {
     margin: 0 6%; }
 
   .masthead {
@@ -81,7 +230,8 @@ html {
     background: #C4DF9B;
     /* green */ }
 
-  .highlights .col-md-4 p, .founders .col-md-4 p {
+  .highlights .col-md-4 p,
+  .founders .col-md-4 p {
     margin: 0 12%; } }
 /* tablets; bootstrap - md */
 @media (min-width: 992px) and (max-width: 1200px) {
